Adding roles to authorities